crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_orphan_impl_with_source.snap
---
source: crates/alder-driver/src/compile.rs
description: "impl Show[Number] {\n    fn show(value: Number) String { \"number\" }\n}\n"
---
alder::canonicalize::orphan_impl

  × orphan implementation of `Show[Number]`: this package owns neither `Show`
  │ (the standard library) nor `Number` (the standard library)
   ╭─[/project/src/main.ald:1:1]
 1 │ ╭─▶ impl Show[Number] {
 2 │ │       fn show(value: Number) String { "number" }
 3 │ ├─▶ }
   · ╰──── this package owns neither side of the implementation
   ╰────
  help: define either the trait or subject type in this package, or move the
        impl to a package that does
