crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_superclass_cycle_with_source.snap
---
source: crates/alder-driver/src/compile.rs
description: "trait First[a] where a: Second {\n    fn first(value: a) a\n}\ntrait Second[a] where a: First {\n    fn second(value: a) a\n}\n"
---
alder::trait::superclass_cycle

  × trait superclass cycle: First -> Second
   ╭─[/project/src/main.ald:4:1]
 3 │     }
 4 │ ╭─▶ trait Second[a] where a: First {
 5 │ │       fn second(value: a) a
 6 │ ├─▶ }
   · ╰──── this trait participates in the superclass cycle
   ╰────
  help: remove one of the superclass constraints in this cycle
