crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_trait_parser_error_with_source.snap
---
source: crates/alder-driver/src/compile.rs
description: "trait Show[a] where a Show {\n    fn show(value: a) String\n}\n"
---
alder::syntax

  × I was expecting a trait bound or associated type equality
   ╭─[/project/src/main.ald:1:23]
 1 │ trait Show[a] where a Show {
   · ┬                     ┬
   · │                     ╰── expected `:` or `.Assoc ==`
   · ╰── this trait declaration starts here
 2 │     fn show(value: a) String
   ╰────
  help: write `a: Show` or `i.Item == Number`
