crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_try_after_awaiting_a_non_result_without_color.snap
---
source: crates/alder-driver/src/compile.rs
description: "#[extern(\"alder:kernel\", \"$taskSleep\")]\nfn sleep(milliseconds: Number) Task[()]\n\nasync fn invalid() Result[Number] {\n    sleep(1).await?\n    Ok(42)\n}\n"
---
alder::type::type_mismatch

  × type mismatch: expected `Result[a, [b]]`, found `()`
   ╭─[/project/src/main.ald:5:5]
 4 │ async fn invalid() Result[Number] {
 5 │     sleep(1).await?
   ·     ───────┬───────
   ·            ╰── this propagation requires compatible Option or Result types
 6 │     Ok(42)
   ╰────
